<resources>
    <string name="app_name">La Esquina Del Sabor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesion</string>

    <string name="menu_home">La Esquina Del Sabor</string>
    <string name="menu_gallery">La Esquina Del Sabor</string>
    <string name="menu_slideshow">La Esquina Del Sabor</string>
    <string name="registro_productos">Registrar Producto</string>
    <string name="nombre_producto">Nombre del producto: </string>
    <string name="precio_producto">Precio: </string>
    <string name="descripcion_producto">Descripción: </string>
    <string name="descuento_producto">Id descuento: </string>
    <string name="Stock">Stock: </string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Borrar</string>
    <string name="editar">Editar</string>
    <string name="registro_ventas">Registro de Ventas</string>
    <string-array name="metodos_pago">
        <item>Efectivo</item>
        <item>Tarjeta de Crédito</item>
        <item>Tarjeta de Débito</item>
    </string-array>
    <string-array name="categorias">
        <item>Enlatados</item>
        <item>Embutidos</item>
        <item>Lácteos</item>
    </string-array>
    <string name="total_venta">Total de la Venta: </string>
    <string name="registrar_venta">Registrar</string>
    <string name="registro_proveedores">Registro de Proveedores</string>
    <string name="nombre_proveedor">Nombre del Proveedor</string>
    <string name="telefono_proveedor">Teléfono</string>
    <string name="rfc_proveedor">Rfc</string>
    <string name="correo_proveedor">Correo</string>
    <string name="registrar_proveedor">Registrar</string>
    <string name="horario_de_atencion">Horarios de atencion</string>
    <string name="Contacto">Contacto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="channel_name">Venta Notifications</string>
        <string name="channel_description">Notifications for new ventas</string>
        <string name="api_key_img">1234</string>
</resources>