<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7A541">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_proveedores"
        android:textColor="#FDFDFD"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/edtNombreProveedor"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:hint="@string/nombre_proveedor"
        android:inputType="text"
        android:textColor="#FDFDFD"
        android:textColorHint="#F3F3F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/edtRFC"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:hint="@string/rfc_proveedor"
        android:inputType="text"
        android:textColor="#FDFDFD"
        android:textColorHint="#F3F3F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreProveedor"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/edtTelefono"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:hint="@string/telefono_proveedor"
        android:inputType="phone"
        android:textColor="#FDFDFD"
        android:textColorHint="#F3F3F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRFC"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/edtCorreo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:hint="@string/correo_proveedor"
        android:inputType="textEmailAddress"
        android:textColor="#FDFDFD"
        android:textColorHint="#F3F3F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTelefono"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btnRegistrarProveedor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#5BB125"
        android:text="@string/registrar_proveedor"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelarProveedor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreo"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/btnCancelarProveedor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:backgroundTint="#C13C3C"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegistrarProveedor"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreo"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>
